--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -35,6 +35,7 @@ header {
     align-items: center;
     height: 50px;
     padding: 0 2.5%;
+    margin-top: 20px;
 }
 
 .app-name a {
@@ -247,7 +248,6 @@ footer {
 }
 
 .next-btn {
-    margin-top: 15px;
     background-color: gold;
     border-color: gold;
     color: black;
@@ -448,7 +448,15 @@ input::-webkit-calendar-picker-indicator {
     display: none;
 }
 
-.home-page.active, .typeform-container.active {
+.home-page.active {
+    flex: 1 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; 
+}
+
+.typeform-container.active {
     display: block;
 }
 
@@ -461,6 +469,7 @@ input::-webkit-calendar-picker-indicator {
     padding: 0px;
     border-radius: 8px;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
+    margin-top: 10%;
 }
 
 .progress {
