--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="app-name">
-            </h3><a href="{{ url_for('home') }}">Sunnyscout</a></h3>
+            <h3><a href="{{ url_for('home') }}">Sunnyscout</a></h3>
         </div>
         <nav>
           <a href="#">About</a>
