--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                                     <button type="button" class="btn btn-secondary back-btn" onclick="window.location.href='{{ url_for('home') }}'">Back</button>
                                 </div>
                                 <div class="next-button">
-                                    <button type="button" class="btn btn-dark next-btn" id="next-btn">Next</button>
+                                    <button type="button" class="btn btn-dark next-btn">Next</button>
                                 </div>
                             </div>
                         </div>
