--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,8 @@
                     </div>
                     <form id="search-form" action="{{ url_for('result') }}" method="GET">
                         <div class="question active" id="location-question" data-question="1">
-                            <h2>Where are you located?</h2>
+                            <h2>Current Location</h2>
+                            <p>* currently only available for European cities</p>
                             <input type="text" id="current-location" name="current_location" class="form-select text-bg-light" placeholder="Your current location" required autocomplete="off" list="cities-list">
                             <datalist id="cities-list"></datalist>
                             <div id="error-message" style="color: red; display: none;">Please select a location to continue.</div>
@@ -60,7 +61,7 @@
 
                         <div class="question" id="date-question" data-question="2">
                             <h2>When do you want to travel?</h2>
-                            <p>Note: weather forecasting is most accurate for up to 16 days in advance.</p>
+                            <p>* weather forecasting is available 16 days in advance</p>
                             <div class="date-range">
                                 <input type="text" id="date-range" name="date_range" required>
                             </div>
@@ -77,9 +78,10 @@
 
                         <div class="question" id="distance-question" data-question="3">
                             <h2>How far are you willing to travel?</h2>
+                            <p>* London -> Istanbul is ~2,500km, Naples -> Nordkapp is ~4,500km</p>
                             <div class="preference-option">
                                 <label for="distance">Distance (km): <span id="distance-value">Any distance</span></label>
-                                <input type="range" id="distance" name="distance" min="0" max="5000" step="100" value="2500">
+                                <input type="range" id="distance" name="distance" min="0" max="5000" step="100" value="5000">
                             </div>
                             <div class="button-group">
                                 <div class="back-button">
@@ -93,6 +95,7 @@
 
                         <div class="question" id="population-question" data-question="4">
                             <h2>What size of city do you prefer?</h2>
+                            <p>* population data from <a href="https://simplemaps.com/" target="_blank">simplemaps.com</a></p>
                             <div class="preference-option">
                                 <p>Select one or more options:</p>
                                 <div class="form-check">
@@ -138,6 +141,7 @@
 
                         <div class="question" id="cost-question" data-question="5">
                             <h2>What's your budget?</h2>
+                            <p>* based loosely on cost of living and restaurant prices - data from <a href="https://numbeo.com/cost-of-living" target="_blank">Numbeo</a></p>
                             <div class="preference-option">
                                 <p>Select one or more options:</p>
                                 <div class="form-check">
@@ -187,41 +191,41 @@
                                 <thead>
                                     <tr>
                                         <th></th>
-                                        <th>Must have</th>
-                                        <th>Don't want</th>
-                                        <th>Either way!</th>
+                                        <th>Only</th>
+                                        <th>Include</th>
+                                        <th>Exclude</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td>Island</td>
-                                        <td><input type="radio" name="island" value="must" id="island-must"></td>
-                                        <td><input type="radio" name="island" value="dont" id="island-dont"></td>
-                                        <td><input type="radio" name="island" value="either" id="island-either" checked></td>
+                                        <td><input type="radio" name="island" value="must" id="capital-must"></td>
+                                        <td><input type="radio" name="island" value="either" id="capital-either" checked></td>
+                                        <td><input type="radio" name="island" value="dont" id="capital-dont"></td>
                                     </tr>
                                     <tr>
                                         <td>Capital City</td>
                                         <td><input type="radio" name="capital" value="must" id="capital-must"></td>
-                                        <td><input type="radio" name="capital" value="dont" id="capital-dont"></td>
                                         <td><input type="radio" name="capital" value="either" id="capital-either" checked></td>
+                                        <td><input type="radio" name="capital" value="dont" id="capital-dont"></td>
                                     </tr>
                                     <tr>
                                         <td>European Union</td>
                                         <td><input type="radio" name="eu" value="must" id="eu-must"></td>
-                                        <td><input type="radio" name="eu" value="dont" id="eu-dont"></td>
                                         <td><input type="radio" name="eu" value="either" id="eu-either" checked></td>
+                                        <td><input type="radio" name="eu" value="dont" id="eu-dont"></td>
                                     </tr>
                                     <tr>
                                         <td>Schengen Area</td>
                                         <td><input type="radio" name="schengen" value="must" id="schengen-must"></td>
-                                        <td><input type="radio" name="schengen" value="dont" id="schengen-dont"></td>
                                         <td><input type="radio" name="schengen" value="either" id="schengen-either" checked></td>
+                                        <td><input type="radio" name="schengen" value="dont" id="schengen-dont"></td>
                                     </tr>
                                     <tr>
                                         <td>Eurozone</td>
                                         <td><input type="radio" name="eurozone" value="must" id="eurozone-must"></td>
-                                        <td><input type="radio" name="eurozone" value="dont" id="eurozone-dont"></td>
                                         <td><input type="radio" name="eurozone" value="either" id="eurozone-either" checked></td>
+                                        <td><input type="radio" name="eurozone" value="dont" id="eurozone-dont"></td>
                                     </tr>
                                 </tbody>
                             </table>
