--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                 <h1>Explore the sunniest spots in Europe!
                 </h1>
                 <p>Easily find, plan, and book your sunny getaway — all from one place.
-                    <br> See the top 5 sunniest cities for your dates, with flights and hotels at your fingertips.
+                    <br> See the 5 sunniest cities for your dates, with flights and hotels at your fingertips.
                 </p>
                 <div class="homepage-img">
                 <dotlottie-player src="https://lottie.host/fd403fc8-0546-4faf-9d81-5ba1db7a67aa/EljZLbq02o.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
