--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKFQNQ5YY1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNDSMMBDFZ"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-NKFQNQ5YY1');
+    gtag('config', 'G-SNDSMMBDFZ');
     </script>
 </head>
 
